--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>992</width>
-    <height>706</height>
+    <width>1000</width>
+    <height>692</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>991</width>
-      <height>706</height>
+      <width>971</width>
+      <height>671</height>
      </rect>
     </property>
     <property name="lineWidth">
@@ -117,16 +117,6 @@
      </widget>
     </widget>
     <widget class="QWidget" name="page_2">
-     <widget class="QTextEdit" name="editReceivedMessage">
-      <property name="geometry">
-       <rect>
-        <x>40</x>
-        <y>130</y>
-        <width>641</width>
-        <height>391</height>
-       </rect>
-      </property>
-     </widget>
      <widget class="QLineEdit" name="editMessage">
       <property name="geometry">
        <rect>
@@ -179,8 +169,8 @@
      <widget class="QTreeWidget" name="treeWidget">
       <property name="geometry">
        <rect>
-        <x>700</x>
-        <y>51</y>
+        <x>710</x>
+        <y>50</y>
         <width>256</width>
         <height>621</height>
        </rect>
@@ -190,6 +180,27 @@
         <string>我的好友</string>
        </property>
       </column>
+     </widget>
+     <widget class="QListWidget" name="listWidget">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>80</y>
+        <width>681</width>
+        <height>481</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QListWidget{background-color: rgb(247, 247, 247); color:rgb(51,51,51); border: 1px solid  rgb(247, 247, 247);outline:0px;}
+QListWidget::Item{background-color: rgb(247, 247, 247);}
+QListWidget::Item:hover{background-color: rgb(247, 247, 247); }
+QListWidget::item:selected{
+	background-color: rgb(247, 247, 247);
+	color:black; 
+    border: 1px solid  rgb(247, 247, 247);
+}
+QListWidget::item:selected:!active{border: 1px solid  rgb(247, 247, 247); background-color: rgb(247, 247, 247); color:rgb(51,51,51); } </string>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="page_3"/>
